# treport

./: README.md  requirements.txt  setup.cfg
treport/: __main__.py  report.py
treport_example/: documents.csv  run_report.ini  run_report.py  run_report.xml  run_report_params.txt  treport.ini
treport_example/sql/: treport_example_page1.sql
treport_example/templates/: treport_example.xlsx
