[metadata]
name = treport-novikov.nsa
version = 0.0.8
author = Sergey Novikov
author_email = novikov.nsa@yandex.ru
description = Library for generating tabular reports with results output in MS Excel format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/novikov-nsa/treport
project_urls =
    Bug Tracker = https://github.com/novikov-nsa/treport/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    lxml == 4.8.0
    Jinja2 == 3.1.2
    openpyxl == 3.0.10
    postgres == 4.0

include_package_data=True

[options.packages.find]
where = src